--- a/tinker/admin/program_search/templates/database-audit.html
+++ b/tinker/admin/program_search/templates/database-audit.html
@@ -13,6 +13,8 @@
         <div class="container-fluid">
             <div class="col-md-12">
                 <div id="main">
+                    <p>Note, for Undergrad programs, the key we store is the name of the block. For everything else, we store them using the Concentration Code provided in Cascade.</p>
+                    <hr/>
                     <div id="tables"></div>
                 </div>
             </div>
