Set Up the format for the view for event selector
Still have to get
Ajax working completely and make sure it is sending all the information
to the init for search

--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -115,6 +115,7 @@
                         {{ field }}
 
                     {% else %}
+                    {% else %}
                         {{ field(size=20) }}
                     {% endif %}
 
