--- a/tinker/e_announcements/templates/announcement.html
+++ b/tinker/e_announcements/templates/announcement.html
@@ -4,11 +4,11 @@
             <td class="column" style="padding: 0;text-align: left;vertical-align: top;color: #555;font-size: 14px;line-height: 20px;font-family: Georgia,serif;width: 600px;">
                 <div style="Margin-left: 20px;Margin-right: 20px;">
                     <h2 style="Margin-top: 0;Margin-bottom: 16px;font-style: normal;font-weight: normal;color: #555;font-size: 20px;line-height: 28px;font-family: sans-serif;">
-                        <strong>{{ title }}</strong>
+                        <strong>{{ title|safe }}</strong>
                     </h2>
                 </div>
                 <div style="Margin-left: 20px;Margin-right: 20px;">
-                    {{ message }}
+                    {{ message|safe }}
                 </div>
             </td>
         </tr>
