fixes to e-annz

--- a/tinker/admin/publish/templates/publish-program-feeds.html
+++ b/tinker/admin/publish/templates/publish-program-feeds.html
@@ -15,8 +15,8 @@
             <div class="col-md-12">
                 <h3 class="subtitle">Publish Program Feeds</h3>
                 <br/>
-                <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "staging") }}' class="button">Publish to Staging</a>
-                <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "production") }}' class="button">Publish to Production and Staging</a>
+                <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "staging") }}' class="btn">Publish to Staging</a>
+                <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "production") }}' class="btn">Publish to Production and Staging</a>
             </div>
         </div>
     </div>
