--- a/tinker/admin/publish/templates/publish-program-feeds-table.html
+++ b/tinker/admin/publish/templates/publish-program-feeds-table.html
@@ -10,10 +10,16 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<h3>Publish Program Feeds</h3>
-
-<a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "staging") }}' class="button">Publish to Staging</a>
-<a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "production") }}' class="button">Publish to Production and Staging</a>
+<div class="content">
+    <h3>Publish Program Feeds</h3>
+    <div class="container-fluid">
+        <div class="col-md-12">
+            <h3 class="subtitle">Publish Program Feeds</h3>
+            <br/>
+            <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "staging") }}' class="btn">Publish to Staging</a>
+            <a href='{{ url_for('publish.PublishView:publish_program_feeds_return', destination = "production") }}' class="btn">Publish to Production and Staging</a>
+        </div>
+    </div>
 
     <p>Published these pages to {{ destination }}</p>
     <table>
@@ -37,4 +43,6 @@
 
     {% endfor %}
     </table>
+
+</div>
 {% endblock %}
