Finished writing search
Still needs to be corrected to work with the html appropriately

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -96,35 +96,35 @@
                             </div>
                         </label>
                         {#                        The section below does the non-submit changes#}
-{#                        <script type="text/javascript">#}
-{#                            $("#school-selector").change(function () {#}
-{#                                $('.school-bios').hide();#}
-{#                                var array_of_values = $("#school-selector").val();#}
-{#                                for (i = 0; i < array_of_values.length; i++) {#}
-{#                                    $('.' + array_of_values[i]).show();#}
-{#                                }#}
-{#                            });#}
-{#                        </script>#}
+                        <script type="text/javascript">
+                            $("#school-selector").change(function () {
+                                $('.school-bios').hide();
+                                var array_of_values = $("#school-selector").val();
+                                for (i = 0; i < array_of_values.length; i++) {
+                                    $('.' + array_of_values[i]).show();
+                                }
+                            });
+                        </script>
                     </div>
                     <hr/>
                     {#                                         The lines below display the events that will be produced by the search when "search" is clicked #}
                     {#                                        show all bios #}
-{#                    {% for schools in all_schools %}#}
-{#                        {% for class_name, school_name in schools.items() %}#}
-{#                            <div class="{{ class_name }} events">#}
-{#                                <h3>{{ school_name }}</h3>#}
-{#                                <div>#}
-{#                                    {% for bio in forms %}#}
-{#                                        {% if school_name in event.schools %}#}
-{#                                            {{ display_event(event) }}#}
-{#                                        {% elif 'Bethel University' in event.schools and class_name == 'bu' %}#}
-{#                                            {{ display_event(event) }}#}
-{#                                        {% endif %}#}
-{#                                    {% endfor %}#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        {% endfor %}#}
-{#                    {% endfor %}#}
+                    {% for schools in all_schools %}
+                        {% for class_name, school_name in schools.items() %}
+                            <div class="{{ class_name }} events">
+                                <h3>{{ school_name }}</h3>
+                                <div>
+                                    {% for bio in forms %}
+                                        {% if school_name in event.schools %}
+                                            {{ display_event(event) }}
+                                        {% elif 'Bethel University' in event.schools and class_name == 'bu' %}
+                                            {{ display_event(event) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
                     {% if user_forms %}
                         <hr/>
                         <h2>Your Events</h2>
