--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -238,15 +238,14 @@
                 $('.datepicker').each(function (index) {
                     var picker = new Pikaday({
                         field: this,
-                        disabledDaysOfWeek: [0, 2, 4, 6],
-                        disabledDates: ['12/24', '12/25', '12/26', '12/27', '12/28', '12/29', '12/30', '12/31', '01/01'],
                         format: 'MM-DD-YYYY',
                         disableDayFn: function (date) {
                             // remove all Sun/Tues/Thur/Sat days from the week
-                            if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1) {
+                            if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1 || is_date_a_bethel_holiday(date) ) {
                                 return date;
                             }
 
+                            // Find the previous business day at 1pm, continually searching back until you hit a MWF that is not a holiday
                             var dateCutoff = date;
                             dateCutoff.setDate(dateCutoff.getDate() - 1);
 
