--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -194,7 +194,7 @@
                         var L = I - J;
                         var M = 3 + Math.floor((L + 40)/44);
                         var D = L + 28 - 31*Math.floor(M/4);
-
+                        // test
                         var M_zero_based = M - 1;
 
                         return newDate.getMonth() == M_zero_based && newDate.getDate() == D;
