--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -65,7 +65,7 @@
                     <a href="add#page-title" id="event-create" class="btn btn-primary new-btn">
                         Create New Event
                     </a>
-                    #in action add the url calling the post method for search
+                    {# in action add the url calling the post method for search#}
                     <div>
                         <label><h3 class="first-subtitle">View:</h3>
                             <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector"
@@ -98,22 +98,22 @@
                     </div>
                     <hr/>
                     {# The lines below display the events that will be produced by the search when "search" is clicked #}
-{#                    {% for schools in all_schools %}#}
-{#                        {% for class_name, school_name in schools.items() %}#}
-{#                            <div class="{{ class_name }} events">#}
-{#                                <h3>{{ school_name }}</h3>#}
-{#                                <div>#}
-{#                                    {% for bio in forms %}#}
-{#                                        {% if school_name in event.schools %}#}
-{#                                            {{ display_event(event) }}#}
-{#                                        {% elif 'Bethel University' in event.schools and class_name == 'bu' %}#}
-{#                                            {{ display_event(event) }}#}
-{#                                        {% endif %}#}
-{#                                    {% endfor %}#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        {% endfor %}#}
-{#                    {% endfor %}#}
+                    {% for schools in all_schools %}
+                        {% for class_name, school_name in schools.items() %}
+                            <div class="{{ class_name }} events">
+                                <h3>{{ school_name }}</h3>
+                                <div>
+                                    {% for bio in forms %}
+                                        {% if school_name in event.schools %}
+                                            {{ display_event(event) }}
+                                        {% elif 'Bethel University' in event.schools and class_name == 'bu' %}
+                                            {{ display_event(event) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
                     {% if user_forms %}
                         <hr/>
                         <h2>Your Events</h2>
@@ -126,21 +126,21 @@
 
 
 {#                    <!-- other forms -->#}
-{#                    {% if other_forms %}#}
-{#                        <br/>#}
-{#                        <hr/>#}
-{#                        {% if 'Event Approver' in session['groups'] %}#}
-{#                            <h2>Event Approver</h2>#}
-{#                        {% elif 'Tinker Events - CAS' in session['groups'] %}#}
-{#                            <h2>Undergrad Events</h2>#}
-{#                        {% else %}#}
-{#                            <h2>Other Events</h2>#}
-{#                        {% endif %}#}
-{#                        <hr/>#}
-{#                        {% for form in other_forms %}#}
-{#                            {{ form_card(form) }}#}
-{#                        {% endfor %}#}
-{#                    {% endif %}#}
+                    {% if other_forms %}
+                        <br/>
+                        <hr/>
+                        {% if 'Event Approver' in session['groups'] %}
+                            <h2>Event Approver</h2>
+                        {% elif 'Tinker Events - CAS' in session['groups'] %}
+                            <h2>Undergrad Events</h2>
+                        {% else %}
+                            <h2>Other Events</h2>
+                        {% endif %}
+                        <hr/>
+                        {% for form in other_forms %}
+                            {{ form_card(form) }}
+                        {% endfor %}
+                    {% endif %}
                 </div>
 
                 <br/>
